fix bug that the interface doesn't fit well in iphone safari

--- a/css/main.css
+++ b/css/main.css
@@ -20,6 +20,10 @@ div {
     display: block;
 }
 
+html, body {
+    height: 100%;
+}
+
 body {
     font-size: 16px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
